# kitchenClash

./: CMakeLists.txt  Makefile  agent.owl  agent.urdf  cmake_install.cmake  h_neem.owl  kitchenClash0.urdf  package.xml  rviz_launch_agent.launch  vr_kitchen.urdf
launch/: rviz_launch_agent.launch  rviz_launch_map_vr_kitchen.launch
launch/old/: rviz_launch_agent_single_mesh.launch  rviz_launch_fbx.launch  rviz_launch_map.launch
meshes/: BroomBottom.fbx  BroomTop.fbx  Clothespeg1.fbx  Clothespeg2.fbx  MicrowaveBack.fbx  MicrowaveFront.fbx  Refridgerator_Door.fbx  Refridgerator_Empty.fbx  Refridgerator_UpperDrawer.fbx  SM_Bowl.fbx  SM_Bowl_Big.fbx  SM_Bowl_Small.fbx  SM_Cup.fbx  SM_Cup_Espresso.fbx  SM_Fork_Dessert.fbx  SM_Fork_Dinner.fbx  SM_Glass_1.fbx  SM_Glass_2.fbx  SM_Glass_Redwine.fbx  SM_Glass_Whitewine.fbx  SM_Knife_Butter.fbx  SM_Knife_Table.fbx  SM_Plate_Classic_16cm.fbx  SM_Plate_Classic_18cm.fbx  SM_Plate_Classic_21cm.fbx  SM_Plate_Classic_23cm.fbx  SM_Plate_Classic_26cm.fbx  SM_Plate_Classic_28cm.fbx  SM_Plate_Classic_30cm.fbx  SM_Saucer.fbx  SM_Saucer_Espresso.fbx  SM_Spoon_Dessert.fbx  SM_Spoon_Soup.fbx  SM_Tray1.fbx  SM_Tray2.fbx  SM_Tray3.fbx  SM_TraySet_Big.fbx  SM_TraySet_Mid.fbx  SM_TraySet_Small.fbx  Sink1Button.fbx  (+16 more)
meshes/dae/: A_l.dae  Book_1.dae  Bookshelf.dae  Bookshelf_2_.dae  BroomBottom.dae  BroomTop.dae  ClothSpawn.dae  Cube.dae  Cube1.dae  Cube12.dae  Cube13.dae  Cube14.dae  Cube15.dae  Cube16.dae  Cube17.dae  Cube18.dae  Cube2.dae  (+176 more)
owl/: KitchenClashAgent.owl  KitchenClashMap.owl
urdf/: KitchenClashAgent.urdf  KitchenClashMap.urdf
(+375 files in other folders)
