<?xml version="1.0"?>
<package format="2">
    <name>h_neem</name>
    <version>0.0.0</version>
    <description>The h_neem package</description>

    <maintainer email="avyas@uni-bremen.de">Abhijit Vyas</maintainer>
    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>


    <export>
    </export>
</package>
