<?xml version="1.0"?>
<package format="2">
    <name>kitchenClash</name>
    <version>0.0.0</version>
    <description>The kitchenClash package</description>

    <maintainer email="avyas@uni-bremen.de">Abhijit Vyas</maintainer>
    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>


    <export>
    </export>
</package>
